src/test/deca/context/invalid/control_structures/while_condition_readint.deca
// Description:
//    Test de while avec un readint
//    On ne peut pas readint vu que ca ne retourne pas un booleen
//
// Resultats:
//    Context: erreur line 14, boolean mais ints
//
// Historique:
//    cree le 14/01/2022

{
    while(readint()) 
    {
        print("salut") ;
    }
}